--- a/less/navigation.less
+++ b/less/navigation.less
@@ -1,4 +1,5 @@
 .header {
+    max-width: 100%;
     .center();
     flex-direction: column;
     .title {
@@ -9,13 +10,23 @@
     }
 
     .nav {
-        width: 450px;
+        width: 56.25%;
         margin-bottom: 1%;
         display: flex;
-        justify-content: space-evenly;
+        justify-content: space-between;
+
+        @media @phone {
+            width: 80%;
+            justify-content: space-between;
+        }
+
         .nav-item {
            color:@header-font-color;
            font-size: 1.5rem;
            text-decoration: none;
+
+           @media @phone {
+               font-size: 1.2rem;
+           }
         }
 }
